// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parses events: irrelevant_code_block.md 1`] = `
[
  {
    "cardRef": "should be present in parsed result",
    "timestamp": "1706012788684",
    "type": "draw_card",
  },
]
`;

exports[`parses events: simple.md 1`] = `
[
  {
    "cardRef": "^2",
    "timestamp": "1706012788684",
    "type": "draw_card",
  },
  {
    "cardRef": "^3",
    "timestamp": "1706012792713",
    "type": "draw_card",
  },
  {
    "cardRef": "^4",
    "timestamp": "1706012795173",
    "type": "draw_card",
  },
]
`;

exports[`parses template: inline_fields_inline_html.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "category": "truth",
              "endPos": 30,
              "startPos": 0,
            },
          ],
          "ref": "#HTML inline field^0",
          "text": "<span data-category="truth" />",
        },
      ],
      "name": "HTML inline field",
      "ref": "#HTML inline field",
    },
  ],
}
`;

exports[`parses template: inline_fields_inline_html_multiple.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "category": "truth",
              "endPos": 30,
              "startPos": 0,
            },
          ],
          "ref": "#HTML inline field^0",
          "text": "<span data-category="truth" />",
        },
        {
          "annotations": [
            {
              "category": "truth",
              "endPos": 30,
              "startPos": 0,
            },
            {
              "category": "dare",
              "endPos": 62,
              "startPos": 33,
            },
          ],
          "ref": "#HTML inline field^1",
          "text": "<span data-category="truth" /> * <span data-category="dare" />",
        },
        {
          "annotations": [
            {
              "actor": "0",
              "endPos": 41,
              "replace": "name",
              "startPos": 0,
            },
            {
              "category": "dare",
              "endPos": 99,
              "startPos": 70,
            },
          ],
          "ref": "#HTML inline field^2",
          "text": "<span data-actor="0" data-replace="name">Peter</span> does something. <span data-category="dare" />",
        },
      ],
      "name": "HTML inline field",
      "ref": "#HTML inline field",
    },
  ],
}
`;

exports[`parses template: inline_fields_span_with_children.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "actor": "0",
              "endPos": 71,
              "replace": "genitive",
              "startPos": 26,
            },
            {
              "category": "dare",
              "endPos": 124,
              "startPos": 95,
            },
          ],
          "ref": "#Span with children^0",
          "text": "one card: do something to <span data-replace="genitive" data-actor="0">a player's</span> hair. <span data-category="dare" />",
        },
      ],
      "name": "Span with children",
      "ref": "#Span with children",
    },
  ],
}
`;

exports[`parses template: media_embedded_image.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "endPos": 50,
              "startPos": 0,
              "type": "image",
              "url": "MAM_8533239_SHOP_IMAGE_1.8.png 1.webp|100x100",
            },
          ],
          "ref": "#List of one image^0",
          "text": "![[MAM_8533239_SHOP_IMAGE_1.8.png 1.webp|100x100]]",
        },
      ],
      "name": "List of one image",
      "ref": "#List of one image",
    },
  ],
}
`;

exports[`parses template: media_embedded_video_mp4.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "endPos": 37,
              "startPos": 21,
              "type": "image",
              "url": "a_video.mp4",
            },
          ],
          "ref": "^0",
          "text": "And here is a video: ![[a_video.mp4]]",
        },
      ],
      "name": "",
      "ref": "",
    },
  ],
}
`;

exports[`parses template: media_image.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "endPos": 5,
              "startPos": 0,
              "type": "image",
              "url": "",
            },
          ],
          "ref": "#List of one image^0",
          "text": "![[]]",
        },
      ],
      "name": "List of one image",
      "ref": "#List of one image",
    },
  ],
}
`;

exports[`parses template: media_image_external.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "endPos": 122,
              "startPos": 26,
              "type": "image",
              "url": "https://upload.wikimedia.org/wikipedia/commons/6/62/Panthera_tigris_sumatran_subspecies.jpg",
            },
          ],
          "ref": "^0",
          "text": "Here is an external image ![[https://upload.wikimedia.org/wikipedia/commons/6/62/Panthera_tigris_sumatran_subspecies.jpg]]",
        },
      ],
      "name": "",
      "ref": "",
    },
  ],
}
`;

exports[`parses template: media_image_external_html.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "endPos": 129,
              "src": "https://upload.wikimedia.org/wikipedia/commons/6/66/Adult_male_Royal_Bengal_tiger.jpg",
              "startPos": 33,
              "type": "img",
            },
          ],
          "ref": "^0",
          "text": "and an external image using HTML <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Adult_male_Royal_Bengal_tiger.jpg" /> ..",
        },
      ],
      "name": "",
      "ref": "",
    },
  ],
}
`;

exports[`parses template: media_video_external_html.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [
            {
              "endPos": 51,
              "startPos": 28,
              "type": "image",
              "url": "a_picture.webp|100",
            },
          ],
          "ref": "^0",
          "text": "Here's an embedded picture: ![[a_picture.webp|100]]",
        },
        {
          "annotations": [
            {
              "endPos": 37,
              "startPos": 21,
              "type": "image",
              "url": "a_video.mp4",
            },
          ],
          "ref": "^1",
          "text": "And here is a video: ![[a_video.mp4]]",
        },
        {
          "annotations": [
            {
              "endPos": 122,
              "startPos": 26,
              "type": "image",
              "url": "https://upload.wikimedia.org/wikipedia/commons/6/62/Panthera_tigris_sumatran_subspecies.jpg",
            },
          ],
          "ref": "^2",
          "text": "Here is an external image ![[https://upload.wikimedia.org/wikipedia/commons/6/62/Panthera_tigris_sumatran_subspecies.jpg]]",
        },
        {
          "annotations": [
            {
              "endPos": 129,
              "src": "https://upload.wikimedia.org/wikipedia/commons/6/66/Adult_male_Royal_Bengal_tiger.jpg",
              "startPos": 33,
              "type": "img",
            },
          ],
          "ref": "^3",
          "text": "and an external image using HTML <img src="https://upload.wikimedia.org/wikipedia/commons/6/66/Adult_male_Royal_Bengal_tiger.jpg" /> ..",
        },
        {
          "annotations": [
            {
              "endPos": 119,
              "src": "https://upload.wikimedia.org/wikipedia/commons/b/b2/A_walk_with_the_Tigress.webm",
              "startPos": 26,
              "type": "video",
            },
          ],
          "ref": "^4",
          "text": "external video using HTML <video src="https://upload.wikimedia.org/wikipedia/commons/b/b2/A_walk_with_the_Tigress.webm" />",
        },
      ],
      "name": "",
      "ref": "",
    },
  ],
}
`;

exports[`parses template: no_heading.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [],
          "ref": "^0",
          "text": "this document has no heading",
        },
        {
          "annotations": [],
          "ref": "^1",
          "text": "but two cards",
        },
      ],
      "name": "",
      "ref": "",
    },
  ],
}
`;

exports[`parses template: one_heading.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [],
          "ref": "#a heading^0",
          "text": "card 1",
        },
        {
          "annotations": [],
          "ref": "#a heading^1",
          "text": "card 1",
        },
      ],
      "name": "a heading",
      "ref": "#a heading",
    },
  ],
}
`;

exports[`parses template: regression_html_tag_with_children.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [],
          "ref": "#Regression HTML Tag with children^0",
          "text": "Do something <b>bold</b>!",
        },
      ],
      "name": "Regression HTML Tag with children",
      "ref": "#Regression HTML Tag with children",
    },
  ],
}
`;

exports[`parses template: two_headings.md 1`] = `
{
  "stacks": [
    {
      "cards": [
        {
          "annotations": [],
          "ref": "#Heading one^0",
          "text": "card 1",
        },
        {
          "annotations": [],
          "ref": "#Heading one^1",
          "text": "card 1",
        },
      ],
      "name": "Heading one",
      "ref": "#Heading one",
    },
    {
      "cards": [
        {
          "annotations": [],
          "ref": "#Heading two^0",
          "text": "foo",
        },
        {
          "annotations": [],
          "ref": "#Heading two^1",
          "text": "bar",
        },
      ],
      "name": "Heading two",
      "ref": "#Heading two",
    },
  ],
}
`;
